--- a/VMess-HTTP/config_server.json
+++ b/VMess-HTTP/config_server.json
@@ -19,6 +19,7 @@
             "listen": "0.0.0.0",
             "port": 8080,
             "protocol": "vless",
+            "decryption": "none",
             "settings": {
                 "clients": [
                     {
